--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,8 +50,8 @@ android {
         minSdkVersion 16
         //minSdkVersion 21
         targetSdkVersion 30
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 1
+        versionName '1.0.0'
         // setProperty("archivesBaseName", "$versionCode.$platformName")
         // ndk.abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
         // ndk {
