--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # version: 1.0.4-beta.1+44
-version: 1.0.4+43
+version: 1.0.5+50
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -27,18 +27,27 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  #cupertino_icons: ^1.0.0
 
   # Custom
-  package_info: ^0.4.3
-  path_provider: ^1.6.18
-  http: ^0.12.2
-  firebase_core: ^0.5.0+1
-  firebase_analytics: ^6.0.2
-  share: ^0.6.5+2
+  #package_info: ^0.4.3
+  #path_provider: ^1.6.18
+  #http: ^0.12.2
+  #firebase_core: ^0.5.0+1
+  #firebase_analytics: ^6.0.2
+  flutter_reorderable_list: ^1.0.0
+  share: ^2.0.4
+  firebase_analytics: ^8.2.0
+  firebase_core: ^1.4.0
+  http: ^0.13.3
+  path_provider: ^2.0.2
+  package_info: ^2.0.2
+  cupertino_icons: ^1.0.3
+  #share: ^0.6.5+2
   # flutter_reorderable_list: ^0.1.4
-  flutter_reorderable_list: ^0.1.5
+  #flutter_reorderable_list: ^0.1.5
   # flutter_tts: ^1.2.7
+  collection: ^1.15.0-nullsafety.4
 
 dev_dependencies:
   flutter_test:
