--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,11 +53,11 @@ android {
         versionCode 1
         versionName '1.0.0'
         // setProperty("archivesBaseName", "$versionCode.$platformName")
-        // ndk.abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
-        // ndk {
-        //     abiFilters "armeabi", "x86", "armeabi-v7a"
-        // }
-        // multiDexEnabled true
+        //ndk.abiFilters 'armeabi','armeabi-v7a','arm64-v8a','x86','x86_64',
+            ndk {
+                abiFilters "armeabi", "x86","x86_64", "armeabi-v7a", "arm64-v8a"
+            }
+         multiDexEnabled true
         // testInstrumentationRunner "android.support.test.runner.AndroidJUni
 
     }
